Navigasyon sistemi tamamen yenilendi ve basitleştirildi

--- a/index.html
+++ b/index.html
@@ -264,35 +264,35 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link active" data-nav-link>
+            <button class="navbar-link active" data-nav-link="about">
               <span class="tr">Hakkımda</span>
               <span class="en">About</span>
             </button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>
+            <button class="navbar-link" data-nav-link="resume">
               <span class="tr">Özgeçmiş</span>
               <span class="en">Resume</span>
             </button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>
+            <button class="navbar-link" data-nav-link="portfolio">
               <span class="tr">Portfolio</span>
               <span class="en">Portfolio</span>
             </button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>
+            <button class="navbar-link" data-nav-link="blog">
               <span class="tr">Blog</span>
               <span class="en">Blog</span>
             </button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>
+            <button class="navbar-link" data-nav-link="contact">
               <span class="tr">İletişim</span>
               <span class="en">Contact</span>
             </button>
@@ -2020,6 +2020,7 @@
   
   <!-- custom js link -->
   <script src="./assets/js/project-data.js"></script>
+  <script src="./assets/js/navigation.js"></script>
   <script src="./assets/js/script.js"></script>
 
   <!--
