Form e-posta adresini gerçek adresle güncelleme

--- a/index.html
+++ b/index.html
@@ -1960,8 +1960,8 @@
               var formResult = document.getElementById('form-result');
               
               if (contactForm) {
-                // FormSubmit.co servisine form bağlantısı - Lütfen kendi email adresinizi girin
-                contactForm.setAttribute('action', 'https://formsubmit.co/alikokrtv@example.com');
+                // FormSubmit.co servisine form bağlantısı - Gerçek email adresi
+                contactForm.setAttribute('action', 'https://formsubmit.co/alikokrtv@gmail.com');
                 contactForm.setAttribute('method', 'POST');
                 
                 // Gizli alanlar ekleme
