feat: add multi-language support and project content management

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/modal.css">
+  
+  <!-- Language and Project Data Scripts -->
+  <script src="./assets/js/language.js"></script>
+  <script src="./assets/js/project-data.js"></script>
 
   <!--
     - google font link
@@ -139,6 +143,9 @@
 
           <p class="title tr">Yazılım Geliştirme Uzmanı</p>
           <p class="title en">Software Development Specialist</p>
+          
+          <p class="education tr">Gazi ATL - Bilişim Teknolojileri</p>
+          <p class="education en">Gazi ATL - Information Technologies</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -660,7 +667,8 @@
       <article class="resume" data-page="resume">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title tr">Özgeçmiş</h2>
+          <h2 class="h2 article-title en">Resume</h2>
         </header>
 
         <section class="timeline">
@@ -670,43 +678,57 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3 tr">Eğitim</h3>
+            <h3 class="h3 en">Education</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Özünder Bilgisayar Akademisi</h4>
+              <h4 class="h4 timeline-item-title tr">Gazi ATL - Bilişim Teknolojileri</h4>
+              <h4 class="h4 timeline-item-title en">Gazi ATL - Information Technologies</h4>
+
+              <span>2013 — 2016</span>
+
+              <p class="timeline-text tr">
+                Bilgisayar Programcılığı bölümünde lise eğitimimi tamamladım. Temel programlama dilleri, veritabanı yönetimi ve web teknolojileri konularında eğitim aldım.
+              </p>
+              <p class="timeline-text en">
+                Completed high school education in Computer Programming department. Received training in basic programming languages, database management, and web technologies.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title tr">Özünder Bilgisayar Akademisi</h4>
+              <h4 class="h4 timeline-item-title en">Özünder Computer Academy</h4>
 
               <span>2019 — 2020</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text tr">
                 Web tasarım ve programlama kursları eğitimi aldım. HTML, CSS, JavaScript, PHP ve WordPress altyapısı üzerine yoğunlaşan çalışmalar yaptım.
               </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Udemy & Online Platformlar</h4>
-
-              <span>2018 — Devam Ediyor</span>
-
-              <p class="timeline-text">
-                Web geliştirme, React, PHP ve Laravel konularında sürekli kendimi geliştirmek için çeşitli online kurslara katılıyorum.
+              <p class="timeline-text en">
+                Completed web design and programming courses. Focused on HTML, CSS, JavaScript, PHP, and WordPress infrastructure.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Açıköğretim Lisesi</h4>
+              <h4 class="h4 timeline-item-title tr">Udemy & Online Platformlar</h4>
+              <h4 class="h4 timeline-item-title en">Udemy & Online Platforms</h4>
 
-              <span>2010 — 2013</span>
+              <span class="tr">2018 — Devam Ediyor</span>
+              <span class="en">2018 — Ongoing</span>
 
-              <p class="timeline-text">
-                Lise eğitimimi tamamladım.
+              <p class="timeline-text tr">
+                Web geliştirme, React, PHP ve Laravel konularında sürekli kendimi geliştirmek için çeşitli online kurslara katılıyorum.
+              </p>
+              <p class="timeline-text en">
+                Continuously improving myself through various online courses in web development, React, PHP, and Laravel.
               </p>
 
             </li>
@@ -722,43 +744,57 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3 tr">Deneyim</h3>
+            <h3 class="h3 en">Experience</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web Developer / Yazılım Geliştirme Uzmanı</h4>
+              <h4 class="h4 timeline-item-title tr">Yazılım Geliştirme Uzmanı</h4>
+              <h4 class="h4 timeline-item-title en">Software Development Specialist</h4>
 
-              <span>2023 — Devam Ediyor</span>
+              <span class="tr">2023 — Devam Ediyor</span>
+              <span class="en">2023 — Present</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text tr">
                 Plus Kitchen bünyesinde portal projeleri geliştirme, mobil uygulama yönetimi, Logo API araştırmaları ve raporlama, ürün geçiş sistemleri ve Simpra ile entegrasyon çalışmaları yapıyorum. Bilgi işlem departmanı ile yazılım süreçlerinde aktif rol alıyorum.
+              </p>
+              <p class="timeline-text en">
+                Developing portal projects at Plus Kitchen, managing mobile applications, Logo API research and reporting, product transition systems and Simpra integration work. Taking an active role in software processes with the IT department.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Sosyal Medya Uzmanı - Kreatif Departman</h4>
+              <h4 class="h4 timeline-item-title tr">Sosyal Medya Uzmanı - Kreatif Departman</h4>
+              <h4 class="h4 timeline-item-title en">Social Media Specialist - Creative Department</h4>
 
               <span>2021 — 2023</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text tr">
                 Plus Kitchen'da kreatif projelerde sosyal medya içerikleri oluşturma, video, kurgu, baskı tasarım destekleri sağlama görevlerini üstlendim.
+              </p>
+              <p class="timeline-text en">
+                Undertook tasks of creating social media content for creative projects at Plus Kitchen, providing video, editing, and print design support.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Webmaster & Sosyal Medya Uzmanı</h4>
+              <h4 class="h4 timeline-item-title tr">Webmaster & Sosyal Medya Uzmanı</h4>
+              <h4 class="h4 timeline-item-title en">Webmaster & Social Media Specialist</h4>
 
               <span>2018 — 2021</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text tr">
                 Karahisar Medya & Sayın Medya bünyesinde web siteleri geliştirme, sosyal medya yönetimi ve grafik tasarım çalışmaları yürüttüm.
+              </p>
+              <p class="timeline-text en">
+                Conducted website development, social media management, and graphic design work within Karahisar Media & Sayın Media.
               </p>
 
             </li>
@@ -769,7 +805,8 @@
 
         <section class="skill">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title tr">Yeteneklerim</h3>
+          <h3 class="h3 skills-title en">My Skills</h3>
 
           <ul class="skills-list content-card">
 
@@ -907,74 +944,82 @@
 
           <ul class="project-list">
 
-            <li class="project-item active" data-filter-item data-category="açık kaynak">
-              <a href="javascript:void(0);" class="project-open" data-project-id="1">
+            <li class="project-item active" data-filter-item data-category="web development">
+              <a href="https://github.com/alikokrtv/pastahane-updated" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="dof-manager" loading="lazy">
+                  <img src="./assets/images/project-1.jpg" alt="Pastahane Management System" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DOF Manager</h3>
+                <h3 class="project-title tr">Pastahane Yönetim Sistemi</h3>
+                <h3 class="project-title en">Bakery Management System</h3>
 
-                <p class="project-category">Açık kaynaklı DÖF (Düzeltici Önleyici Faaliyet) takip sistemi. React + PHP tabanlı, SQLite veritabanı entegrasyonlu.</p>
+                <p class="project-category tr">Python Flask tabanlı pastahane yönetim sistemi. Sipariş takibi, stok yönetimi ve müşteri veritabanı.</p>
+                <p class="project-category en">Python Flask-based bakery management system. Order tracking, inventory management, and customer database.</p>
 
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="kurumsal">
-              <a href="javascript:void(0);" class="project-open" data-project-id="2">
+            <li class="project-item active" data-filter-item data-category="web development">
+              <a href="https://github.com/alikokrtv/kira-takip" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="Plus Kitchen Intranet Portal" loading="lazy">
+                  <img src="./assets/images/project-2.png" alt="Rental Management System" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Plus Kitchen Intranet Portal</h3>
+                <h3 class="project-title tr">Kira Takip Sistemi</h3>
+                <h3 class="project-title en">Rental Management System</h3>
 
-                <p class="project-category">WordPress üzerinde geliştirilmiş kurumsal intranet portalı. Form modülleri, video eğitimler, kullanıcı giriş sistemi ve mobil uygulama entegrasyonu.</p>
+                <p class="project-category tr">Flask tabanlı kira yönetim sistemi. Kira sözleşmeleri, mülk grupları, bildirimler ve raporlama.</p>
+                <p class="project-category en">Flask-based rental management system. Rental contracts, property groups, notifications, and reporting.</p>
 
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="web projeler">
-              <a href="javascript:void(0);" class="project-open" data-project-id="project3">
+            <li class="project-item active" data-filter-item data-category="web development">
+              <a href="https://github.com/alikokrtv/vcard-personal-portfolio" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="TaskFlow" loading="lazy">
+                  <img src="./assets/images/project-3.jpg" alt="Personal Portfolio" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">TaskFlow - BT İş Akışı Sistemi</h3>
+                <h3 class="project-title tr">Kişisel Portfolyo</h3>
+                <h3 class="project-title en">Personal Portfolio</h3>
 
-                <p class="project-category">SQLite veritabanı kullanan görev yönetim sistemi. Kategori bazlı iş takibi, kullanıcı görev ekranları ve süreç yönetimi.</p>
+                <p class="project-category tr">HTML, CSS, JavaScript ile geliştirilmiş responsive kişisel portfolyo websitesi. Çift dil desteği.</p>
+                <p class="project-category en">Responsive personal portfolio website developed with HTML, CSS, JavaScript. Bilingual support.</p>
 
               </a>
             </li>
 
             <li class="project-item active" data-filter-item data-category="wordpress">
-              <a href="javascript:void(0);" class="project-open" data-project-id="project4">
+              <a href="https://github.com/alikokrtv/wordpress-plugins" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="WordPress Eklentileri" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="WordPress Plugins" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">WordPress Özel Eklentileri</h3>
+                <h3 class="project-title tr">WordPress Özel Eklentileri</h3>
+                <h3 class="project-title en">Custom WordPress Plugins</h3>
 
-                <p class="project-category">ACF ve WPForms tabanlı özel eklentiler: Giriş yapan kullanıcı hoşgeldin mesajı, doğum günü kutlama, toplantı rezervasyon sistemi, REST API destekli booking plugini.</p>
+                <p class="project-category tr">ACF ve WPForms tabanlı özel eklentiler: Hoşgeldin mesajları, doğum günü kutlamaları, toplantı rezervasyon sistemi.</p>
+                <p class="project-category en">Custom plugins based on ACF and WPForms: Welcome messages, birthday celebrations, meeting reservation system.</p>
 
               </a>
             </li>
