refactor: update script tags to use type="module" for improved module support and modify start commands in package.json and railway.json to utilize environment variable for port

--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
   </script>
 
   <!-- Performance Monitoring -->
-  <script src="./assets/js/performance.js"></script>
+  <script type="module" src="./assets/js/performance.js"></script>
   
   <!-- Image Optimization -->
-  <script src="./assets/js/image-optimization.js"></script>
+  <script type="module" src="./assets/js/image-optimization.js"></script>
   
   <!-- Language and Project Data Scripts -->
-  <script src="./assets/js/language.js"></script>
-  <script src="./assets/js/project-data.js"></script>
+  <script type="module" src="./assets/js/language.js"></script>
+  <script type="module" src="./assets/js/project-data.js"></script>
   
   <!-- Service Worker Registration -->
   <script>
@@ -2350,9 +2350,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   
   <!-- custom js link -->
-  <script src="./assets/js/project-data.js"></script>
-  <script src="./assets/js/navigation.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <script type="module" src="./assets/js/script.js"></script>
+  <script type="module" src="./assets/js/navigation.js"></script>
 
   <!--
     - ionicon link
